Get the examples back to working.

--- a/examples/index.html
+++ b/examples/index.html
@@ -166,7 +166,7 @@
         fileref.setAttribute("src", prefix+(version==""?"":(version+"/"))+url);
         document.getElementsByTagName("head")[0].appendChild(fileref);
       }
-      load_script("toplevel_js.js");
+      load_script("toplevel.js");
 
     </script>
   </head>
