--- a/examples/index.html
+++ b/examples/index.html
@@ -120,6 +120,14 @@
       #toplevel-examples .list-group-item{
       padding: 5px 15px;
       }
+      #btn-exec {
+      float:right;
+      margin-top:-20px;
+      background-color:rgb(92, 129, 184);
+      border-color: rgb(70, 75, 128);
+      padding: 1px 5px;
+      display:none;
+      }
       #btn-share {
       float:right;
       margin-top:-20px;
@@ -178,6 +186,8 @@
         <textarea id="userinput">Loading ...</textarea>
         <button type="button" class="btn btn-default"
                 id="btn-share">Share</button>
+        <button type="button" class="btn btn-default"
+                id="btn-exec">Exec</button>
       </div>
     </div>
     <div id="toplevel-side">
