--- a/examples/index.html
+++ b/examples/index.html
@@ -174,7 +174,7 @@
         fileref.setAttribute("src", prefix+(version==""?"":(version+"/"))+url);
         document.getElementsByTagName("head")[0].appendChild(fileref);
       }
-      load_script("toplevel.bc.js");
+      load_script("toplevel_js.bc.js");
 
     </script>
   </head>
